--- a/jdbc-datasource/src/main/resources/application.properties
+++ b/jdbc-datasource/src/main/resources/application.properties
@@ -22,6 +22,8 @@ quarkus.log.file.enable = true
 
 # Set how many time the route should be applied
 etl.timer.repeatcount = 0
+etl.timer.period = 10000
+etl.timer.delay  = 1000
 %test.etl.timer.repeatCount = 1
 
 # Source Database Configuration
