Use Strimzi as the Kafka devservices image as it works on Power architecture

--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -15,6 +15,9 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
+# Use Strimzi as it's power architecture compatible
+quarkus.kafka.devservices.provider = strimzi
+
 # Kafka topic Name
 kafka.topic.name=test
 
