--- a/health/src/main/resources/application.properties
+++ b/health/src/main/resources/application.properties
@@ -28,16 +28,16 @@ camel.main.bean-introspection-extended-statistics=true
 camel.main.bean-introspection-logging-level=INFO
 
 # enable supervised route controller which will startup routes in safe manner
-camel.main.route-controller-supervise-enabled = true
+camel.routeController.enabled = true
 # attempt up till 10 times to start a route (and exhaust if still failing)
 # when a route is exhausted then its taken out as being supervised and
 # will not take part of health-check either (UNKNOWN state)
-camel.main.route-controller-back-off-max-attempts = 10
+camel.routeController.back-off-max-attempts = 10
 # when starting a route (and restarts) fails all attempts
 # then we can control whether the route should be influence the health-check
 # and report the route as either UNKNOWN or DOWN. Setting this option to true
 # will report it as DOWN otherwise its UNKNOWN
-#camel.main.route-controller-unhealthy-on-exhausted = true
+#camel.routeController.unhealthy-on-exhausted = true
 
 # enable health check (is automatic enabled if discovered on classpath)
 # global flag to enable/disable
