--- a/jpa-idempotent-repository/src/main/kubernetes/kubernetes.yml
+++ b/jpa-idempotent-repository/src/main/kubernetes/kubernetes.yml
@@ -21,18 +21,18 @@ metadata:
   name: camel-quarkus-examples-mariadb-database-deployment
   labels:
     app.kubernetes.io/name: camel-quarkus-examples-mariadb-database
-    app.kubernetes.io/version: 3.9.0
+    app.kubernetes.io/version: 3.9.1-SNAPSHOT
 spec:
   replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: camel-quarkus-examples-mariadb-database
-      app.kubernetes.io/version: 3.9.0
+      app.kubernetes.io/version: 3.9.1-SNAPSHOT
   template:
     metadata:
       labels:
         app.kubernetes.io/name: camel-quarkus-examples-mariadb-database
-        app.kubernetes.io/version: 3.9.0
+        app.kubernetes.io/version: 3.9.1-SNAPSHOT
     spec:
       containers:
         - name: mariadb-database
@@ -68,7 +68,7 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/name: camel-quarkus-examples-mariadb-database
-    app.kubernetes.io/version: 3.9.0
+    app.kubernetes.io/version: 3.9.1-SNAPSHOT
   name: mariadb-database
 spec:
   ports:
@@ -77,7 +77,7 @@ spec:
       targetPort: 3306
   selector:
     app.kubernetes.io/name: camel-quarkus-examples-mariadb-database
-    app.kubernetes.io/version: 3.9.0
+    app.kubernetes.io/version: 3.9.1-SNAPSHOT
   type: ClusterIP
 ---
 apiVersion: v1
@@ -85,7 +85,7 @@ kind: Secret
 metadata:
   labels:
     app.kubernetes.io/name: camel-quarkus-examples-mariadb-database
-    app.kubernetes.io/version: 3.9.0
+    app.kubernetes.io/version: 3.9.1-SNAPSHOT
   name: mariadb-secret
 type: Opaque
 data:
