--- a/cxf-soap/pom.xml
+++ b/cxf-soap/pom.xml
@@ -52,6 +52,9 @@
         <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5926-->
+        <skipTests>true</skipTests>
+        <quarkus.build.skip>true</quarkus.build.skip>
     </properties>
 
     <dependencyManagement>
