--- a/platform-http-security-keycloak/src/main/resources/application.properties
+++ b/platform-http-security-keycloak/src/main/resources/application.properties
@@ -35,6 +35,7 @@ quarkus.keycloak.devservices.users.boss=boss-pass
 quarkus.keycloak.devservices.roles.boss=${cq.role.admin}
 quarkus.keycloak.devservices.users.employee=employee-pass
 quarkus.keycloak.devservices.roles.employee=regular-role
+quarkus.keycloak.devservices.image-name=registry.redhat.io/rhbk/keycloak-rhel9:22-6
 
 # Camel
 camel.context.name = quarkus-camel-example-platform-http-security
