--- a/file-split-log-xml/pom.xml
+++ b/file-split-log-xml/pom.xml
@@ -263,7 +263,7 @@
                 </property>
             </activation>
             <properties>
-                <quarkus.package.type>native</quarkus.package.type>
+                <quarkus.native.enabled>true</quarkus.native.enabled>
             </properties>
             <build>
                 <plugins>
@@ -278,7 +278,7 @@
                                 </goals>
                                 <configuration>
                                     <systemPropertyVariables>
-                                        <quarkus.package.type>${quarkus.package.type}</quarkus.package.type>
+                                        <quarkus.native.enabled>${quarkus.native.enabled}</quarkus.native.enabled>
                                     </systemPropertyVariables>
                                 </configuration>
                             </execution>
