--- a/rest-json/pom.xml
+++ b/rest-json/pom.xml
@@ -251,7 +251,7 @@
                 </property>
             </activation>
             <properties>
-                <quarkus.package.type>native</quarkus.package.type>
+                <quarkus.native.enabled>true</quarkus.native.enabled>
             </properties>
             <build>
         <pluginManagement>
