--- a/cluster-leader-election/pom.xml
+++ b/cluster-leader-election/pom.xml
@@ -29,8 +29,8 @@
     <description>Camel Quarkus Example :: Cluster leader election</description>
 
     <properties>
-        <quarkus.platform.version>3.10.0.CR1</quarkus.platform.version>
-        <camel-quarkus.platform.version>3.10.0-SNAPSHOT</camel-quarkus.platform.version>
+        <quarkus.platform.version>3.10.0</quarkus.platform.version>
+        <camel-quarkus.platform.version>3.11.0-SNAPSHOT</camel-quarkus.platform.version>
 
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
