--- a/jdbc-datasource/pom.xml
+++ b/jdbc-datasource/pom.xml
@@ -25,8 +25,8 @@
     <name>Camel Quarkus :: Examples :: Jdbc - DatataSource - Log</name>
     <description>Camel Quarkus Example :: Connect to Database using Datasource</description>
     <properties>
-        <quarkus.platform.version>3.10.0.CR1</quarkus.platform.version>
-        <camel-quarkus.platform.version>3.10.0-SNAPSHOT</camel-quarkus.platform.version>
+        <quarkus.platform.version>3.10.0</quarkus.platform.version>
+        <camel-quarkus.platform.version>3.11.0-SNAPSHOT</camel-quarkus.platform.version>
 
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
