--- a/jms-jpa/pom.xml
+++ b/jms-jpa/pom.xml
@@ -25,8 +25,8 @@
     <name>Camel Quarkus :: Examples :: JMS JPA</name>
     <description>Camel Quarkus Example :: JMS JPA</description>
     <properties>
-        <quarkus.platform.version>3.10.0.CR1</quarkus.platform.version>
-        <camel-quarkus.platform.version>3.10.0-SNAPSHOT</camel-quarkus.platform.version>
+        <quarkus.platform.version>3.10.0</quarkus.platform.version>
+        <camel-quarkus.platform.version>3.11.0-SNAPSHOT</camel-quarkus.platform.version>
         <quarkiverse-artemis.version>3.1.4</quarkiverse-artemis.version>
 
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
