--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -28,8 +28,8 @@
     <description>Camel Quarkus Example :: Kafka</description>
 
     <properties>
-        <quarkus.platform.version>3.10.0.CR1</quarkus.platform.version>
-        <camel-quarkus.platform.version>3.10.0-SNAPSHOT</camel-quarkus.platform.version>
+        <quarkus.platform.version>3.10.0</quarkus.platform.version>
+        <camel-quarkus.platform.version>3.11.0-SNAPSHOT</camel-quarkus.platform.version>
 
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
