--- a/observability/docker-compose.yml
+++ b/observability/docker-compose.yml
@@ -20,20 +20,9 @@ services:
 
   # Jaeger
   jaeger-all-in-one:
-    image: jaegertracing/all-in-one:1.33
+    image: jaegertracing/all-in-one:1.57
     ports:
       - "16686:16686"
-      - "14268:14268"
-      - "14250:14250"
-
-  # Collector
-  otel-collector:
-    image: otel/opentelemetry-collector:0.50.0
-    command: [ "--config=/etc/otel-collector-config.yaml" ]
-    volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
-    ports:
-      - "13133:13133" # Health_check extension
-      - "4317:4317"   # OTLP gRPC receiver
-    depends_on:
-      - jaeger-all-in-one
+      - "4317:4317"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
