--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -24,8 +24,12 @@ quarkus.management.enabled = true
 # Identifier for the origin of spans created by the application
 quarkus.application.name = camel-quarkus-observability
 
+# Enables optional tracing of each Camel processor
+# quarkus.camel.opentelemetry.trace-processors=true
+
 # For OTLP
 quarkus.otel.exporter.otlp.traces.endpoint = http://${TELEMETRY_COLLECTOR_COLLECTOR_SERVICE_HOST:localhost}:4317
+quarkus.otel.exporter.otlp.traces.timeout = 30s
 
 #
 # Camel
