Use the camel case setBody in chucknorris kamelet

--- a/kamelet-chucknorris/src/main/resources/kamelets/chuck-norris-source.kamelet.yaml
+++ b/kamelet-chucknorris/src/main/resources/kamelets/chuck-norris-source.kamelet.yaml
@@ -54,6 +54,6 @@ spec:
         period: "{{period}}"
       steps:
         - to: "https://api.chucknorris.io/jokes/random?category=dev"
-        - set-body:
+        - setBody:
             jsonpath: "$.value"
         - to: "kamelet:sink"
