--- a/health/pom.xml
+++ b/health/pom.xml
@@ -103,6 +103,7 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
