Add missing test scope to rest-assured

--- a/cluster-leader-election/pom.xml
+++ b/cluster-leader-election/pom.xml
@@ -104,6 +104,7 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.awaitility</groupId>
