--- a/message-bridge/src/main/resources/application.properties
+++ b/message-bridge/src/main/resources/application.properties
@@ -26,11 +26,12 @@ ibm.mq.user=app
 ibm.mq.password=passw0rd
 ibm.mq.queue=DEV.QUEUE.1
 
-quarkus.artemis.amqConnectionFactory.url=tcp://localhost:61616
-%kubernetes.quarkus.artemis.amqConnectionFactory.url=tcp://${ACTIVEMQ_SERVICE_HOST}:61616
-%openshift.quarkus.artemis.amqConnectionFactory.url=tcp://activemq-artemis-broker:61616
-quarkus.artemis.amqConnectionFactory.username=admin
-quarkus.artemis.amqConnectionFactory.password=admin
+quarkus.artemis.devservices.enabled=true
+%prod.quarkus.artemis.url=tcp://localhost:61616
+%prod.quarkus.artemis.username=admin
+%prod.quarkus.artemis.password=admin
+%kubernetes.quarkus.artemis.url=tcp://${ACTIVEMQ_SERVICE_HOST}:61616
+%openshift.quarkus.artemis.url=tcp://activemq-artemis-broker:61616
 amq.queue=in
 
 quarkus.pooled-jms.transaction=xa
