--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,6 +40,7 @@ updates:
       - dependency-name: "org.zeroturnaround:zt-exec"
       # Test dependencies
       - dependency-name: "org.assertj:assertj-core"
+      - dependency-name: "org.wiremock:wiremock-standalone"
       # Maven plugins
       - dependency-name: "*:*-maven-plugin"
       - dependency-name: "org.apache.maven.plugins:*"
