--- a/kamelet-chucknorris/src/main/resources/application.properties
+++ b/kamelet-chucknorris/src/main/resources/application.properties
@@ -23,3 +23,5 @@ quarkus.log.file.enable = true
 
 # Camel
 quarkus.camel.kamelet.identifiers = chuck-norris-source
+
+chuck.norris.api.url = https://api.chucknorris.io/jokes/random?category=dev
